# dubio

./: .gitignore  README.md
utils/: integrated_pipeline.py  lyrics_basic_math.json  lyrics_plant_biology.json  modal_worker_int2.py  modal_worker_integrated.py  modal_worker_jamify.py  modal_worker_song_gen.py  pyproject.toml  requirements.txt  stitch_audio_video.py  yt_to_resonite_visemes.py
utils/jamify/: .gitmodules  LICENSE.md  README.md  STABILITY_AI_COMMUNITY_LICENSE.md  inference.py  install.sh  pyproject.toml  requirements.txt
utils/jamify/configs/: dpo.yaml  jam_infer.yaml  pretrain.yaml  sft.yaml
utils/jamify/inputs/: Jade Bird - Avalanche.json_genre.txt  Rizzle Kicks, Rachel Chinouriri - Follow Excitement!.json_genre.txt  Waylon Wyatt - Sincerely, Your Son.json_genre.txt  input.json  lyrics_basic_math.json  lyrics_basic_math.txt
utils/jamify/inputs_default/: Hybrid Minds, Brodie - Heroin.json_genre.txt
utils/jamify/outputs/: generation_config.yaml  generation_metadata.json
utils/jamify/public/: silence_latent.pt
utils/lyrics-aligner/: yt_to_resonite_visemes.py
utils/lyrics-aligner-new/whisperx/: modal_worker_whisperx.py
utils/lyrics-aligner-old/: yt_to_resonite_visemes.py
utils/lyrics-generation/: one_shot_lyrics_gen.py  robust_lyrics_gen.py
utils/lyricsgeneration/: lyrics_generate.py  output_lyrics.json  robust_lyrics_gen.py  sample_visemes.json  visemes_resonite_min.json  visemes_resonite_min_short.json
utils/song-gen/: input.json  lyrics.json  modal_worker_song_gen.py  style_prompt.txt
utils/stitch/: stitch_audio_video.py
(+24 files in other folders)
