[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
    "librosa>=0.11.0",
    "modal>=1.1.1",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "yt-dlp>=2025.7.21",
    "openai>=1.99.6",
    "ipython>=9.4.0",
]
