[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "JAM"
version         = "0.0.0"
description     = "First Project under Jamify"
authors         = []
readme          = "README.md"
requires-python = ">=3.10"

[tool.setuptools]  # src-layout directive
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
